cursor alignment fix

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -690,7 +690,8 @@ a:hover {
 }
 
 .cursor {
-  position: absolute;
+  position: fixed;
+  margin-top: -20px;
   z-index: -1;
   pointer-events: none;
 }
@@ -729,7 +730,7 @@ a:hover {
 .fade-a {
   animation: fade-swap 8s infinite;
   animation-delay: -4s;
-  opaicty: 1;
+  opacity: 1;
 }
 
 .fade-b {
